--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -5,78 +5,79 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{{ app.request.basepath }}/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    
+
     <link href="{{ app.request.basepath }}/css/microcms.css" rel="stylesheet">
 
     <title>Skyflow.io - {% block title %}{% endblock %}</title>
 </head>
 <body>
-    <div class="container">
-        <nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-target">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="/">Skyflow.io</a>
-                </div>
+<div class="container">
+    <nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-target">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">Skyflow.io</a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbar-collapse-target">
+                <ul class="nav navbar-nav navbar-right">
+                    {% if app.security.token and is_granted('IS_AUTHENTICATED_FULLY') %}
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-th-list"></span>
+                                Welcome, {{ app.security.token.user.username }}<b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{{ path('events') }}">Events</a></li>
+                                <li><a href="{{ path('flows') }}">Flows</a></li>
+                                <li class="divider"></li>
+                                <li><a href="{{ path('mapping') }}">Mapping</a></li>
+                                <li class="divider"></li>
+                                <li><a href="{{ path('wave_credentials')}}">Wave Setup</a></li>
+                                <li><a href="{{ path('ET_credentials') }}">ExactTarget Setup</a></li>
+                                <li class="divider"></li>
+                                <li><a href="{{ path('et-helper') }}">ExactTarget API Helper</a></li>
+                                <li><a href="{{ path('wave-helper') }}">Wave API Helper</a></li>
+                                <li class="divider"></li>
+                                <li><a href="{{ path('gestionToken') }}">Skyflow-Token Gestion</a></li>
+                                <li class="divider"></li>
+                                <li><a href="{{ path('logout') }}">Log out</a></li>
+                            </ul>
+                        </li>
+                    {% else %}
 
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
-                     {% if app.security.token and is_granted('IS_AUTHENTICATED_FULLY') %}
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Create <span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="{{ path('events') }}">Events</a></li>
-                                    <li><a href="{{ path('flows') }}">Flows</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="{{ path('mapping') }}">Mapping</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Setup <span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="{{ path('wave_credentials')}}">Wave Setup</a></li>
-                                    <li><a href="{{ path('ET_credentials') }}">ExactTarget Setup</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Helper <span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="{{ path('et-helper') }}">ExactTarget API Helper</a></li>
-                                    <li><a href="{{ path('wave-helper') }}">Wave API Helper</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="{{ path('gestionToken') }}">Skyflow-Token Gestion</a></li>
-                            <li><a href="{{ path('logout') }}">Log out</a></li>
-                     {% else %}
-                            <li><a href="{{ path('login') }}">Log in</a></li>
-                            <li><a href="{{ path('account') }}">Create account</a></li>
-                     {% endif %}
-                    </ul>
-                </div>
-            </div><!-- /.container -->
-        </nav>
-        {% autoescape %}
-        <div id="content">{% block content %}{% endblock %}</div>
-        {% endautoescape %}
-        <footer class="footer">
-            Skyflow.io
-        </footer>
-    </div>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <span class="glyphicon glyphicon-user"></span> Not connected <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{{ path('login') }}">Log in</a></li>
+                                <li><a href="{{ path('account') }}">Create account</a></li>
+                            </ul>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div><!-- /.container -->
+    </nav>
+    {% autoescape %}
+    <div id="content">{% block content %}{% endblock %}</div>
+    {% endautoescape %}
+    <footer class="footer">
+        Skyflow.io
+    </footer>
+</div>
 
-    <!-- jQuery -->
-    <script src="{{ app.request.basepath }}/lib/jquery/jquery.js"></script>
-    
-    <!-- JavaScript Boostrap plugin -->
-    <script src="{{ app.request.basepath }}/lib/bootstrap/js/bootstrap.min.js"></script>
-    <!-- Ckeditor -->
-     <script src="{{ app.request.basepath }}/lib/ckeditor/ckeditor.js"></script>
-      <script src="{{ app.request.basepath }}/lib/ckeditor/adapters/jquery.js"></script>
+<!-- jQuery -->
+<script src="{{ app.request.basepath }}/lib/jquery/jquery.js"></script>
+<!-- JavaScript Boostrap plugin -->
+<script src="{{ app.request.basepath }}/lib/bootstrap/js/bootstrap.min.js"></script>
+<!-- Ckeditor -->
+<script src="{{ app.request.basepath }}/lib/ckeditor/ckeditor.js"></script>
+<script src="{{ app.request.basepath }}/lib/ckeditor/adapters/jquery.js"></script>
 
 
-    {% block javascripts %}{% endblock %}
+{% block javascripts %}{% endblock %}
 
 </body>
 </html>
