--- a/views/wave-apihelper.html.twig
+++ b/views/wave-apihelper.html.twig
@@ -10,13 +10,11 @@
             </h1>
         </div>
     </div>
-    <div class="tab-content">
-        <div class="tab-pane fade in active" >
 
             <form action="#" method="post">
                 {{ form_start(requestForm) }}
                 {{ form_row(requestForm.Request, {'label': 'Request'}) }}
-                <input type="submit" name="submit" value="Send Request ! "/>
+                <input type="submit" name="submit" id="submit" value="Send Request ! "/>
                 {{ form_end(requestForm) }}
             </form>
 
@@ -32,7 +30,7 @@
                           {% for h in history %}
                                 <tr>
                                     <td> {{ h.request }} </td>
-                                    <td>  <a href="/resend/{{h.id}}"><button type="button" class="btn-default" title="Resend">Resend</button></a></td>
+                                    <td>  <a href="/resend/{{h.id}}"><button type="button" class="btn-default" title="Resend" data-toggle="modal" data-target="#myModal">Resend</button></a></td>
                                 </tr>
                           {% endfor %}
                     </table>
@@ -41,7 +39,10 @@
                 <div class="alert alert-warning">No history ! </div>
             {% endif %}
 
-        </div>
-    </div>
 </div>
+
 {% endblock %}
+{% block javascripts %}
+<script>
+
+</script>{% endblock %}
